hello-app-service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-np
  namespace: dev
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8080
    nodePort:  30001
    protocol: TCP
