ingress-np.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-np
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: "demo.apps.cwm.com"
    http:
      paths:
        - pathType: Prefix        
          path: "/"
          backend:
            service:
              name: hello-service-np
              port:
                number: 80
        - pathType: Prefix        
          path: "/app"
          backend:
            service:
              name: hello-service-np
              port:
                number: 80
